unpackaged/config/ready/20_Housing_Application_Form/objects/rio_edhouse__Housing__c.object
<CustomObject>
    <fields>
        <fullName>redu_Allergies__c</fullName>
        <label>Allergies</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redu_Assignment_on_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment on Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Authorized_to_Contact_Parent__c</fullName>
        <label>Authorized to Contact Parent/Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Convicted_of_a_Criminal_Offense__c</fullName>
        <label>Convicted of a Criminal Offense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>redu_Details_of_Criminal_Offense__c</fullName>
        <label>Details of Criminal Offense</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redu_Emergency_Contact_Email__c</fullName>
        <label>Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>redu_Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Emergency_Contact_Primary_Phone_No__c</fullName>
        <label>Emergency Contact Primary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>redu_Emergency_Contact_Relationship__c</fullName>
        <label>Emergency Contact Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Full_Academic_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Academic Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Housing_Agreement_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Housing Agreement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Living_Preference__c</fullName>
        <label>Living Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tidy Room</fullName>
                </value>
                <value>
                    <fullName>Average Room</fullName>
                </value>
                <value>
                    <fullName>Untidy Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Housing</relationshipLabel>
        <relationshipName>Housing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Ref_1_Contact_Email__c</fullName>
        <label>Ref #1 Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>redu_Ref_1_Family_Friend__c</fullName>
        <label>Ref #1 - Family/Friend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Ref_2_Contact_Email__c</fullName>
        <label>Ref #2 Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>redu_Ref_2_Employer_Ministry_Leader__c</fullName>
        <label>Ref #2 - Employer/Ministry Leader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Rights_to_Deny_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rights to Deny Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Selections_are_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selections are Preference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Signature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redu_Sleep_Preference__c</fullName>
        <label>Sleep Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before midnight</fullName>
                </value>
                <value>
                    <fullName>After midnight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Socializing_Preference__c</fullName>
        <label>Socializing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequently</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Not often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Staff_to_Be_Aware_Of__c</fullName>
        <label>Staff to Be Aware Of</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>redu_Study_Preference__c</fullName>
        <label>Study Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In a quiet room</fullName>
                </value>
                <value>
                    <fullName>With background noise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Study_Timing_Preference__c</fullName>
        <label>Study Timing Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>During the day</fullName>
                </value>
                <value>
                    <fullName>At night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redu_Submitted_Info_is_True__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted Info is True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redu_Year_of_Study__c</fullName>
        <label>Year of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>(B Ed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Housing Application</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>Housing Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Housing Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>